@@ -21,33 +21,8 @@
  * questions.
  */
 
-/*
- * @test
- * @bug 8009299
- * @ignore 8013875: Incorrect vtable index being set during methodHandle creation for static
- * @summary Javac crashes when compiling method reference to static interface method
- * @run main/othervm -Xverify:none MethodReference66
- */
-public class MethodReference66 {
+package p;
 
-    static int assertionCount = 0;
-
-    static void assertTrue(boolean cond) {
-        assertionCount++;
-        if (!cond)
-            throw new AssertionError();
-    }
-
-    interface SAM {
-        void m(int i);
-    }
-
-    interface I {
-        static void f(int i) { assertTrue(i == 42); }
-    }
-    public static void main(String[] args) {
-        SAM s = I::f;
-        s.m(42);
-        assertTrue(assertionCount == 1);
-    }
+public class Indent {
+    public <T> void m(T t1, T t2) throws Exception { }
 }
